# Babel

./: CMakeLists.txt  Doxyfile  README.md  build.sh  conanfile.txt  make_doc.sh
data/: backup.json
doc/html/: _a_state_8cpp.html  _a_state_8hpp.html  _a_state_8hpp_source.html  _a_t_c_p_socket_8cpp.html  _a_t_c_p_socket_8hpp.html  _a_t_c_p_socket_8hpp_source.html  _babel_exception_8hpp.html  _babel_exception_8hpp_source.html  _boost_t_c_p_socket_8cpp.html  _boost_t_c_p_socket_8hpp.html  _boost_t_c_p_socket_8hpp_source.html  _client_cmd_code_8hpp.html  _client_cmd_code_8hpp_source.html  _command_parser_8cpp.html  _command_parser_8hpp.html  _command_parser_8hpp_source.html  _connection_infos_8cpp.html  _connection_infos_8hpp_source.html  _connection_widget_8cpp.html  _connection_widget_8hpp.html  _connection_widget_8hpp_source.html  _contact_list_8cpp.html  _contact_list_8hpp.html  _contact_list_8hpp_source.html  _data_8cpp.html  _data_8hpp.html  _data_8hpp_source.html  _database_8cpp.html  _database_8hpp.html  _database_8hpp_source.html  _i_audio_codec_8hpp.html  _i_audio_codec_8hpp_source.html  _i_audio_library_8hpp.html  _i_audio_library_8hpp_source.html  _login_widget_8cpp.html  _login_widget_8hpp.html  _login_widget_8hpp_source.html  _main_window_8cpp.html  _main_window_8hpp.html  _main_window_8hpp_source.html  (+125 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  (+40 more)
doc/latex/: _a_state_8cpp.tex  _a_state_8hpp.tex  _a_t_c_p_socket_8cpp.tex  _a_t_c_p_socket_8hpp.tex  _babel_exception_8hpp.tex  _boost_t_c_p_socket_8cpp.tex  _boost_t_c_p_socket_8hpp.tex  _client_cmd_code_8hpp.tex  _command_parser_8cpp.tex  _command_parser_8hpp.tex  _connection_infos_8cpp.tex  _connection_widget_8cpp.tex  _connection_widget_8hpp.tex  _contact_list_8cpp.tex  _contact_list_8hpp.tex  _data_8cpp.tex  _data_8hpp.tex  _database_8cpp.tex  _database_8hpp.tex  _i_audio_codec_8hpp.tex  _i_audio_library_8hpp.tex  _login_widget_8cpp.tex  _login_widget_8hpp.tex  _main_window_8cpp.tex  _main_window_8hpp.tex  _mutex_8cpp.tex  _mutex_8hpp.tex  _opus_codec_8cpp.tex  _opus_codec_8hpp.tex  _port_audio_library_8cpp.tex  _port_audio_library_8hpp.tex  _qt_t_c_p_socket_8cpp.tex  _qt_t_c_p_socket_8hpp.tex  _register_widget_8cpp.tex  _register_widget_8hpp.tex  _scoped_lock_8cpp.tex  _scoped_lock_8hpp.tex  _server_8cpp.tex  _state_machine_8cpp.tex  _state_machine_8hpp.tex  (+59 more)
src/client/: MainWindow.cpp  MainWindow.hpp  main.cpp
src/client/contactList/: ContactList.cpp  ContactList.hpp
src/client/login/: ConnectionWidget.cpp  ConnectionWidget.hpp  LoginWidget.cpp  LoginWidget.hpp  LoginWidget.ui  RegisterWidget.cpp  RegisterWidget.hpp
src/client/network/: QtTCPSocket.cpp  QtTCPSocket.hpp  TCPClient.cpp  TCPClient.hpp
src/client/stateMachine/: AState.cpp  AState.hpp  StateMachine.cpp  StateMachine.hpp
src/common/commandParser/: ClientCmdCode.hpp  CommandParser.cpp  CommandParser.hpp  Data.cpp  Data.hpp
src/common/exception/: BabelException.hpp
src/common/network/: ATCPSocket.cpp  ATCPSocket.hpp  BoostTCPSocket.cpp  BoostTCPSocket.hpp  ConnectionInfos.cpp  ConnectionInfos.hpp
src/common/sound/AudioCodec/: IAudioCodec.hpp  OpusCodec.cpp  OpusCodec.hpp
src/common/sound/AudioLibrary/: IAudioLibrary.hpp  PortAudioLibrary.cpp  PortAudioLibrary.hpp
src/common/threads/: Mutex.cpp  Mutex.hpp  ScopedLock.cpp  ScopedLock.hpp
src/server/: Server.cpp  Server.hpp  main.cpp
src/server/db/: Database.cpp  Database.hpp  User.cpp  User.hpp
